Closed Bug 1711482 Opened 4 years ago Closed 4 years ago

Devtools should display TE header value as "trailers" instead of "Trailers"

Categories

(Core :: Networking: HTTP, defect, P1)

Firefox 88
defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: powers.anirvan, Assigned: powers.anirvan)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:88.0) Gecko/20100101 Firefox/88.0

Steps to reproduce:

Open devtools and visit website supporting HTTP/2 (www.google.com).

Actual results:

In the 'Request Headers' section the TE header value is displayed as "Trailers".

Expected results:

In the 'Request Headers' section the TE header value should be displayed as "trailers".

Firefox is setting TE header value as "trailers" and sending over the wire, but in the devtools the value is displayed as "Trailers".

"trailers" is the only allowed value according to the specification.
https://datatracker.ietf.org/doc/html/rfc7540#section-8.1.2.2

Assignee: nobody → powers.anirvan
Severity: -- → S3
Priority: -- → P1
Whiteboard: [necko-triaged]
Pushed by ddamjanovic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f8a24847ba42 Devtools should display TE header value as "trailers" instead of "Trailers". r=dragana,necko-reviewers
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: