Bug 1711482 - Devtools should display TE header value as "trailers" instead of "Trailers". r=dragana,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D115220